RESOLVED FIXED237619
IntersectionObserver is causing massive document leaks on haaretz.co.il
https://bugs.webkit.org/show_bug.cgi?id=237619
Summary IntersectionObserver is causing massive document leaks on haaretz.co.il
Chris Dumez
Reported 2022-03-08 14:24:49 PST
IntersectionObserver is causing massive document leaks on haaretz.co.il. Many of the iframe documents (Google ad frames) are leaking.
Attachments
Patch (7.52 KB, patch)
2022-03-08 14:35 PST, Chris Dumez
no flags
Patch (7.56 KB, patch)
2022-03-08 18:06 PST, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2022-03-08 14:25:07 PST
Chris Dumez
Comment 2 2022-03-08 14:35:55 PST
Chris Dumez
Comment 3 2022-03-08 18:06:59 PST
EWS
Comment 4 2022-03-08 22:14:57 PST
Committed r291030 (248204@main): <https://commits.webkit.org/248204@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 454180 [details].
Brent Fulgham
Comment 5 2022-05-26 14:45:00 PDT
This fix shipped with Safari 15.5 (all platforms).
Note You need to log in before you can comment on or make changes to this bug.